--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-Hakan's Blog
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome - Hakan's Blog</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        body {
+            background: linear-gradient(to right, #1e3a8a, #3b82f6);
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+            font-family: 'Arial', sans-serif;
+        }
+        .hero {
+            background: rgba(255, 255, 255, 0.95);
+            border-radius: 1rem;
+            padding: 2rem;
+            box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            max-width: 600px;
+            animation: fadeIn 1s ease-in-out;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        .btn {
+            transition: all 0.3s ease;
+        }
+        .btn:hover {
+            transform: scale(1.05);
+            background-color: #2563eb;
+        }
+    </style>
+</head>
+<body>
+    <div class="hero">
+        <h1 class="text-4xl font-bold text-gray-800 mb-4">Welcome to Hakan's Blog!</h1>
+        <p class="text-lg text-gray-600 mb-6">
+            Discover interesting articles, tips, and stories here. 
+            Let's explore together!
+        </p>
+        <a href="/posts" class="btn inline-block bg-blue-600 text-white font-semibold py-2 px-6 rounded-lg">
+            Explore Posts
+        </a>
+    </div>
+</body>
+</html>
